--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,8 +29,7 @@ layout: default
           </div><!-- End Share -->
         </div>
         {% include author-box.html %}
-        {% include recent-post.html %}
-        {% include newsletter.html %}
+        {% include recent-post.html %}<!-- {% include newsletter.html %} -->
         {% include disqus.html %}
       </div>
     </div> <!-- End Wrapper -->
